Terminado todo el panel de admin, a falta de corección de algunos detalles

--- a/app/.env
+++ b/app/.env
@@ -1,1 +1,4 @@
 SECRET_KEY=CyberShield2025_*
+MONGO_URI=mongodb+srv://root:contrasenia1234@cluster0.grjtc3x.mongodb.net/cybershield
+RECAPTCHA_SITE_KEY=6LdWv_orAAAAAIAD68k8npqpX7Kc41iWcaocgws8
+RECAPTCHA_SECRET_KEY=6LdWv_orAAAAAP9ida6Wm7D1PTOR7zc3IuQ16O18
